# AI-DASHENG

./: .env.example  .env.template  .gitignore  README.md  _commit3.py  _commit_ctx.py  _final_cleanup.py  _gc.py  _gc2.py  _gc3.py  _monitor.py  dasheng.py  install_sqlite_cp.py  pyproject.toml  read_bat.py  read_error.py  requirements.txt  run.py  run_gateway.py  start_all.bat  start_all_hidden.vbs  start_gateway.bat  start_gateway_hidden.vbs  start_web.py  tail_log_tmp.py  test_new_search.py  test_qq_token.py  test_qq_ws.py  test_search.py  test_search2.py  test_search3.py  test_search4.py  test_search5.py  test_search6.py  test_search7.py  test_search8.py  test_search_debug.py  test_search_debug2.py  test_search_direct.py  test_setup.py  (+1 more)
data/: test.txt
data/skills/airtable/: SKILL.md
data/skills/apple-notes/: SKILL.md
data/skills/apple-reminders/: SKILL.md
data/skills/architecture-diagram/: SKILL.md
data/skills/arxiv/: SKILL.md
data/skills/ascii-art/: SKILL.md
data/skills/ascii-video/: README.md
src/: 2025-01-01  __init__.py  agent_api.py  bing_result.html  bing_test.html  constants.py  context_compress.py  fetch_trending.py  graph.py  main.py  persistence.py  web_server.py
src/gateway/: __main__.py  models.py  qq_adapter.py  server.py  wechat_adapter.py
src/memory/: __init__.py  store.py
src/skills/: __init__.py  manager.py
src/tools/: __init__.py  disk_tool.py  file_state_cache.py  file_tool.py  memory_tool.py  search_tool.py  skill_tool.py  terminal_tool.py  tmp_manager.py  tool_base.py  web_search_tool.py
src/web/: index.html
(+168 files in other folders)
