[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dasheng"
version = "0.1.0"
description = "DASHENG - 本地 AI Agent 一键部署命令行工具"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "duckduckgo-search>=4.0",
    "websocket-client>=1.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
dasheng = "dasheng:cli"

[tool.setuptools]
py-modules = ["dasheng"]

[tool.setuptools.package-dir]
"" = "."
